MDEV-4362: {division by zero when lookup constant is outside the value table} - Fix Histogram::point_selectivity() to work in the case where the   passed value_pos=0 (or 1) and the first (or the last) bucket in the   histogram has zero value-range (i.e one value).